--- a/AngularTest/Views/Shared/_Layout.cshtml
+++ b/AngularTest/Views/Shared/_Layout.cshtml
@@ -41,7 +41,14 @@
     <script src="~/Scripts/angular-sanitize.min.js"></script>
     <script src="~/Scripts/angular-route.min.js"></script>
     <script src="~/Scripts/toastr.min.js"></script>
-    @Scripts.Render("~/bundles/js")
-
+    <script src="~/js/app.js"></script>
+    <script src="~/js/directives/courseThumbnail.js"></script>
+    <script src="~/js/directives/myModal.js"></script>
+    <script src="~/js/services/dataService.js"></script>
+    <script src="~/js/services/notificationFactory.js"></script>
+    <script src="~/js/controllers/courseListController.js"></script>
+    <script src="~/js/controllers/courseDetailsController.js"></script>
+    <script src="~/js/controllers/newCourseController.js"></script>
+    <script src="~/js/controllers/editCourseController.js"></script>
 </body>
 </html>
