course desc ui change

--- a/AngularTest/templates/directives/CourseThumbnail.html
+++ b/AngularTest/templates/directives/CourseThumbnail.html
@@ -3,7 +3,7 @@
     <div class="row"><img data-ng-src="{{course.imageLink}}" class="col-lg-2"/>
       <h2 class="col-lg-10">{{course.name}}</h2>
     </div>
-    <div class="row padding-top"><span class="col-lg-2">Description:</span><span class="col-lg-10">{{course.description}}</span></div>
+    <div class="row padding-top"><span class="col-lg-2">Description:</span><span class="col-lg-10 course-description">{{course.description}}</span></div>
     <div class="row"><span class="col-lg-2">Status:</span><span class="col-lg-10">{{course.status}}</span></div>
   </div>
   <div class="well hoverWell visible-xs">
