--- a/AngularTest/templates/directives/CourseThumbnail.jade
+++ b/AngularTest/templates/directives/CourseThumbnail.jade
@@ -5,7 +5,7 @@
             h2.col-lg-10 {{course.name}}
         div.row.padding-top
             span.col-lg-2 Description:
-            span.col-lg-10 {{course.description}}
+            span.col-lg-10.course-description {{course.description}}
         div.row
             span.col-lg-2 Status:
             span.col-lg-10 {{course.status}}
