--- a/AngularTest/templates/directives/CourseThumbnail.html
+++ b/AngularTest/templates/directives/CourseThumbnail.html
@@ -1,7 +1,7 @@
 <a href="#/course/{{course.id}}">
   <div class="well hoverWell hidden-xs">
     <div class="row"><img data-ng-src="{{course.imageLink}}" class="col-lg-2"/>
-      <h2 class="col-lg-10">{{course.name}}</h2>
+      <h2 class="col-lg-10 course-header">{{course.name}}</h2>
     </div>
     <div class="row padding-top"><span class="col-lg-2">Description:</span><span class="col-lg-10 course-description">{{course.description}}</span></div>
     <div class="row"><span class="col-lg-2">Status:</span><span class="col-lg-10">{{course.status}}</span></div>
@@ -21,7 +21,6 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-2 control-label">Course Image</label>
         <div class="col-sm-10"><img id="courseImage" data-ng-src="{{course.imageLink}}"/></div>
       </div>
       <div class="form-group">
