card padding removed in mobile view

--- a/AngularTest/Content/app.css
+++ b/AngularTest/Content/app.css
@@ -109,3 +109,9 @@ input.ng-invalid.ng-dirty {
 .course-header {
     height: 66px;
 }
+
+@media (max-width: 767px) {
+    ul.thumbnails li {
+        padding-right: 0;
+    }
+}
