--- a/AngularTest/Views/Shared/_Layout.cshtml
+++ b/AngularTest/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Testing Angular </title>
+    <title>Testing Angular</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
 
