--- a/AngularTest/templates/directives/CourseThumbnail.html
+++ b/AngularTest/templates/directives/CourseThumbnail.html
@@ -1,4 +1,4 @@
-<a href="#/course/{{course.id}}">
+<a href="#/course/{{course.id}}" alt="{{course.name}}">
   <div class="well hoverWell hidden-xs">
     <div class="row"><img data-ng-src="{{course.imageLink}}" class="col-lg-2"/>
       <h2 class="col-lg-10 course-header">{{course.name}}</h2>
