--- a/AngularTest/templates/directives/CourseThumbnail.jade
+++ b/AngularTest/templates/directives/CourseThumbnail.jade
@@ -1,4 +1,4 @@
-﻿a(href="#/course/{{course.id}}")
+﻿a(href="#/course/{{course.id}}", alt="{{course.name}}")
     div.well.hoverWell.hidden-xs
         div.row
             img.col-lg-2(data-ng-src="{{course.imageLink}}")
