--- a/AngularTest/Content/Sass/app.scss
+++ b/AngularTest/Content/Sass/app.scss
@@ -131,5 +131,6 @@ input.ng-invalid.ng-dirty {
 @media (max-width: 767px) {
     ul.thumbnails li {
         padding-right: 0;
+        padding-left: 0;
     }
 }
